--- a/L08_Login.html
+++ b/L08_Login.html
@@ -24,7 +24,7 @@
                         <a href="L07_TableImages.html" target="_blank">L07_TableImages</a>
                     </div>
                 </li>
-                <li><a href="">Contact</a></li>
+                <li><a href="index.html" target="blank">Contact</a></li>
                 <li><a href="L08_Login.html" target="_blank" class="login">LOG IN</a></li>
                 <li><a href="L08_signup_new.html" target="_blank" class="signup">SIGN UP</a></li>
             </ul>
