--- a/L08_Login.html
+++ b/L08_Login.html
@@ -15,7 +15,7 @@
         <a href="index.html"><img src="images/logolg8.PNG" alt=""></a>
         <nav>
             <ul>
-                <li><a href="index.html" target="_blank">Home</a></li>
+                <li><a href="L08_contact.html" target="_blank">Home</a></li>
                 <li class="dropdown">
                     <a href="" class="dropbtn">Pages</a>
                     <div class="dropdown-content">
