--- a/L08_contact.html
+++ b/L08_contact.html
@@ -31,10 +31,10 @@
     </header>
     <section>
         <div class="logo-con">
-            <a href="L08_home.html"><img src="images/logo-fb.png" alt=""></a>
-            <a href="L08_home.html"><img src="images/logo-insta.png" alt=""></a>
-            <a href="L08_home.html"><img src="images/logo-twitter.png" alt=""></a>
-            <a href="L08_home.html"><img src="images/logo-youtube.jpg" alt=""></a>
+            <a href="index.html"><img src="images/logo-fb.png" alt=""></a>
+            <a href="index.html"><img src="images/logo-insta.png" alt=""></a>
+            <a href="index.html"><img src="images/logo-twitter.png" alt=""></a>
+            <a href="index.html"><img src="images/logo-youtube.jpg" alt=""></a>
             <p>Follow us here!</p>
             <p style="color:blueviolet; margin-bottom:-10px">OR leave us you email:</p><br>
             <input type="email" name="email" id="email" placeholder="123@gmail.com" style="height: 1.5rem; width: 15rem"><br>
