--- a/L08_Login.html
+++ b/L08_Login.html
@@ -30,7 +30,7 @@
             </ul>
         </nav>
     </header>
-    <form action="L08_home.html" target="_blank" method="post">
+    <form action="index.html" target="_blank" method="post">
         <h1>Login</h1>
         <div class="form1">
             <div>
